--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,1 +1,26 @@
 @import '~bootstrap/scss/bootstrap';
+@import '../../node_modules/@fortawesome/fontawesome-free/css/all.min.css';
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+header {
+    width: 100%;
+    height: 30px;
+    background-color: #0282F9;
+
+    .logo img {
+        width: 45px;
+    }
+
+    li {
+        margin: 0 10px;
+    }
+
+    .size {
+        font-size: 12px;
+    }
+}
