--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -7,10 +7,16 @@
     box-sizing: border-box;
 }
 
-header {
+.back {
     width: 100%;
     height: 30px;
     background-color: #0282F9;
+}
+
+header {
+    width: 100%;
+    height: 70px;
+    background-color: white;
 
     .logo img {
         width: 45px;
@@ -22,5 +28,48 @@ header {
 
     .size {
         font-size: 12px;
+    }
+}
+
+.jumbotron {
+    width: 100%;
+    height: 300px;
+    background-image: url('../img/jumbotron.jpg');
+    background-size: cover;
+    position: relative;
+
+    div {
+        color: white;
+        width: 160px;
+        background-color: $blue;
+        text-align: center;
+        padding: 6px 0;
+        position: absolute;
+        bottom: -7%;
+        left: 16%;
+        transform: translate(-5%, -16%);
+    }
+}
+
+.card img {
+    width: 200px;
+    height: 200px;
+    background-size: cover;
+}
+
+.card-body p {
+    font-size: 15px;
+}
+
+.justify {
+    display: flex;
+    justify-content: center;
+
+    .button {
+        border: none;
+        padding: 10px 45px;
+        margin: 30px 0 15px;
+        color: white;
+        background-color: $blue;
     }
 }
