--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -73,3 +73,34 @@ header {
         background-color: $blue;
     }
 }
+
+.group {
+    background-color: #0282F9;
+
+    ul {
+        margin: 0 auto;
+
+        li {
+            margin: 30px 5px 30px 0;
+
+            div {
+                margin-right: 2.5rem;
+
+                img {
+                    width: 35px;
+                    margin: 8px;
+                    vertical-align: middle;
+                }
+
+                #locator {
+                    width: 25px;
+                }
+
+                span {
+                    font-size: 10px;
+                    color: white;
+                }
+            }
+        }
+    }
+}
