--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -131,3 +131,33 @@ header {
         }
     }
 }
+
+.social {
+    width: 100%;
+    background-color: #303030;
+    position: relative;
+    z-index: 3;
+
+
+
+    button {
+        background-color: transparent;
+        border: 1px solid #027DEF;
+        padding: 8px;
+        color: white;
+        margin: 32px 0;
+    }
+
+    span {
+        color: #027DEF;
+
+        img {
+            vertical-align: middle;
+            width: 22px;
+            margin: 0 5px;
+        }
+    }
+
+
+
+}
